[package]
name = "tag_parser"
version = "0.1.0"
edition = "2021"
description = "just parse tags like html"
license = "MIT"
repository = "https://github.com/Cergoo/take_sni"
categories = ["parsing"]
documentation = "https://docs.rs/take_sni"
readme = "README.md"

[dependencies]
parcelona = { path="../parcelona", version ="0.4" }

[[example]]
name = "ex1"
path = "examples/ex1.rs"
